<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/planName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="planName"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/planLen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:text="10"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planName" />

    <TextView
        android:id="@+id/days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"
        android:text="days"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/planLen"
        app:layout_constraintTop_toBottomOf="@+id/planName" />

    <TextView
        android:id="@+id/planDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="Plan Description"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planLen" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLessons"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <Button
        android:id="@+id/assignBtn1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:text="morning activity"
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewLessons"
        android:backgroundTint="@color/light_orange"
        android:visibility="invisible"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/activity1"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/light_orange"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewLessons"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/activity1Image"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/meditation_icon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/activity1Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:text="meditate"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/activity1Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:text="10"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/assignBtn2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:text="afternoon activity"
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity1"
        android:backgroundTint="@color/light_orange"
        android:visibility="invisible"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/activity2"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/light_orange"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity1"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/activity2Image"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/meditation_icon" />

        <TextView
            android:id="@+id/activity2Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:text="meditate"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/activity2Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:text="10"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/assignBtn3"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:text="evening activity"
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity2"
        android:backgroundTint="@color/light_orange"
        android:visibility="invisible"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/activity3"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/light_orange"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity2"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/activity3Image"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/meditation_icon" />

        <TextView
            android:id="@+id/activity3Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:text="meditate"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/activity3Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:text="10"
            android:textSize="15sp" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>