...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="20"
    tools:context=".ui.plans.PlansFragment"
    android:id="@+id/fragment_plans_layout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/currentPlanText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/currentPlan"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentPlanText"
...
